--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: SF-Compact;
+  font-weight: bold;
+  src: url("./assets/Fonts/SF-Compact-Display-Bold.otf") format("opentype");
+}
+@font-face {
+  font-family: SF-Compact;
+  src: url("./assets/Fonts/SF-Compact-Display-Regular.otf") format("opentype");
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+body {
+  font-family: SF-Compact;
+}
+button.action {
+  color: crimson;
+  font-size: 3rem;
+  padding: 1rem;
+  text-transform: uppercase;
+  background: transparent;
+  border: solid 1px;
+  outline: none;
+  &:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
+}
